fix padding on mobile

--- a/src/client/public/scratchonthebreak-styles.css
+++ b/src/client/public/scratchonthebreak-styles.css
@@ -36,7 +36,7 @@ a:hover {
 
 .main-content {
     text-align: center;
-    padding: 0 10px;
+    padding: 0 15px;
 }
 
 .links-bar,
